--- a/Python/test.ipynb
+++ b/Python/test.ipynb
@@ -2,30 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys([0, 3, 2, 10])\n",
+      "dict_values([1, 2, 2, 10])\n",
+      "dict_items([(0, 1), (3, 2), (2, 2), (10, 10)])\n",
+      "(0, 1)\n",
+      "(3, 2)\n",
+      "(2, 2)\n",
+      "(10, 10)\n",
+      "0 1\n",
+      "3 2\n",
+      "2 2\n",
+      "10 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {0: 1, 3: 2, 2: 2}\n",
+    "\n",
+    "dic.update({10: 10})\n",
+    "dic\n",
+    "\n",
+    "print((dic.keys()))\n",
+    "print((dic.values()))\n",
+    "print((dic.items()))\n",
+    "\n",
+    "for elm in dic.items():\n",
+    "    print(elm)\n",
+    "\n",
+    "for k, v in dic.items():\n",
+    "    print(k, v)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 0), (2, 4)]"
+       "['c', 'a', 'e', 's', 'n']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list({1:0, 2:4}.items())"
+    "lst = ['s', 'q', 'u', 'i', 'd']\n",
+    "for i in range(len(lst)):\n",
+    "\tlst[i] = chr(ord(lst[i]) + 10)\n",
+    "\tif ord(lst[i]) > ord('z'):\n",
+    "\t\tlst[i] = chr(ord(lst[i]) - 26)\n",
+    "lst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'a', 'e', 's', 'n']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = ['s', 'q', 'u', 'i', 'd']\n",
+    "lst = [chr(ord(ch) + 10) if ord(ch) + 10 <= ord('z')\n",
+    "    else chr(ord(ch) - 16) for ch in lst]\n",
+    "lst"
+   ]
   }
  ],
  "metadata": {
