modified:   C++/test.cpp 	modified:   C++/test3.cpp 	modified:   Python/test.ipynb

--- a/Python/test.ipynb
+++ b/Python/test.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ご注文はうさぎですか？\n"
+     ]
+    }
+   ],
    "source": [
     "def chino_chan() -> None:\n",
     "\tprint(\"ご注文はうさぎですか？\")\n",
@@ -28,23 +36,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ココアさん、おはよございます\n"
+     ]
+    }
+   ],
    "source": [
     "def chino_chan(name: str) -> None:\n",
     "    if len(name) == 0:\n",
     "        return\n",
-    "    print(f\"{name}, おはよございます\")\n",
+    "    print(f\"{name}、おはよございます\")\n",
     "\n",
     "chino_chan(\"ココアさん\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def is_odd(num: int) -> bool:\n",
     "    if num % 2 == 1:\n",
@@ -57,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': '百寬', 'id': 109502987, 'email': 'quan@gmail.com'}\n",
-      "{'name': '百寬', 'id': 109502987, 'email': 'quan@gmail.com'}\n"
+      "{'name': '百寬', 'id': 109502487, 'email': 'quan@gmail.com'}\n",
+      "{'name': '百寬', 'id': 109502487, 'email': 'quan@gmail.com'}\n"
      ]
     }
    ],
@@ -86,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -115,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "num_pub = 0\n",
     "\n",
@@ -147,9 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9804416\n",
+      "9804416\n",
+      "9804416\n"
+     ]
+    }
+   ],
    "source": [
     "a = 100\n",
     "b = 100\n",
@@ -160,9 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139831472651536\n",
+      "139831474080528\n",
+      "139831472648240\n"
+     ]
+    }
+   ],
    "source": [
     "a = 100.0\n",
     "b = 100.0\n",
@@ -180,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "float:139899805677200 tuple:139899515042048 list:139899514954176\n",
-      "float:139899504175216 tuple:139899804896608 list:139899514954176\n"
+      "float:139831472649168 tuple:139831472957568 list:139831472993216\n",
+      "float:139831472648400 tuple:139831472671424 list:139831472993216\n"
      ]
     }
    ],
@@ -205,15 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tup   : 139899515335232\t\tlst   : 139899514983488\n",
-      "tup_cp: 139899515335232\t\tlst_cp: 139899514983488\n",
+      "tup   : 139831473241024\t\tlst   : 139831473265664\n",
+      "tup_cp: 139831473241024\t\tlst_cp: 139831473265664\n",
       "tup   : (1, 2, 3)\t\tlst   : [1, 2, 3, 4, 5, 6]\n",
       "tup_cp: (1, 2, 3, 4, 5, 6)\tlst_cp: [1, 2, 3, 4, 5, 6]\n"
      ]
@@ -245,9 +298,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9801216 9801216\n",
+      "139831472994944 139831472994944\n",
+      "139831473265536 139831473265536\n"
+     ]
+    }
+   ],
    "source": [
     "def foo(obj) -> int:\n",
     "    return id(obj)\n",
@@ -262,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +367,7 @@
      "text": [
       "['0', [1, 2, '0']]\n",
       "[0, [1, 2, '0']]\n",
-      "[0, [1, 2, '0']]\n"
+      "[0, [1, 2]]\n"
      ]
     }
    ],
@@ -316,18 +379,131 @@
     "        else:\n",
     "            l[i] = \"0\"\n",
     "\n",
+    "# 直接傳址\n",
     "lst = [0, [1, 2]]\n",
     "foo(lst)\n",
     "print(lst)\n",
     "\n",
+    "# 淺拷貝\n",
     "lst = [0, [1, 2]]\n",
     "foo(lst.copy())\n",
     "print(lst)\n",
     "\n",
+    "# 深拷貝\n",
     "from copy import deepcopy\n",
     "lst = [0, [1, 2]]\n",
     "foo(deepcopy(lst))\n",
-    "print(lst)\n"
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## lambda 函數"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 使用方式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo(x):\n",
+    "\treturn x ** 2\n",
+    "print(foo(3))\n",
+    "\n",
+    "lam = lambda x: x ** 2\n",
+    "print(lam(3))\n",
+    "\n",
+    "print((lambda x: x ** 2)(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lambda 的應用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (1, -1), (2, 3)]\n",
+      "[(1, -1), (0, 0), (2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [(0, 0), (1, -1), (2, 3)]\n",
+    "\n",
+    "# 預設排序\n",
+    "print(sorted(lst))\n",
+    "# 以第 1 個元素為主排序\n",
+    "print(sorted(lst, key= lambda tup: tup[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, -4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [0, 1, \"abc\", 2.5, True, -4]\n",
+    "\n",
+    "# 過濾出型態為 int 者\n",
+    "print(list(filter(lambda elm: type(elm) == int, lst)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'defg', 'ijk']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [\"abc\\n\", \"defg\\n\", \"ijk\"]\n",
+    "\n",
+    "# 將 lst 每個字串去除頭尾的 \\n\n",
+    "print(list(map(lambda s: s.strip(\"\\n\"), lst)))"
    ]
   }
  ],
