modified:   Python/test.ipynb

--- a/Python/test.ipynb
+++ b/Python/test.ipynb
@@ -295,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', [1, 2, '0']]\n",
-      "[0, [1, 2, '0']]\n",
-      "[0, [1, 2, '0']]\n"
+      "['X', [1, 2, 'X']]\n",
+      "[0, [1, 2, 'X']]\n",
+      "[0, [1, 2]]\n"
      ]
     }
    ],
@@ -312,18 +312,21 @@
     "def foo(l: list) -> None:\n",
     "    for i in range(len(l)):\n",
     "        if (type(l[i]) == list):\n",
-    "            l[i].append(\"0\")\n",
+    "            l[i].append(\"X\")\n",
     "        else:\n",
-    "            l[i] = \"0\"\n",
+    "            l[i] = \"X\"\n",
     "\n",
+    "# 直接傳址\n",
     "lst = [0, [1, 2]]\n",
     "foo(lst)\n",
     "print(lst)\n",
     "\n",
+    "# 淺拷貝 shallow copy\n",
     "lst = [0, [1, 2]]\n",
     "foo(lst.copy())\n",
     "print(lst)\n",
     "\n",
+    "# 深拷貝 deep copy\n",
     "from copy import deepcopy\n",
     "lst = [0, [1, 2]]\n",
     "foo(deepcopy(lst))\n",
