modified:   Assembly/test.asm 	modified:   C++/test.cpp 	modified:   C++/test2.cpp 	modified:   C/test.c 	modified:   Python/test.ipynb 	modified:   Python/test.py

--- a/Python/test.ipynb
+++ b/Python/test.ipynb
@@ -38,22 +38,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ココアさん、おはよございます\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def chino_chan(name: str) -> None:\n",
     "    if len(name) == 0:\n",
     "        return\n",
     "    print(f\"{name}、おはよございます\")\n",
     "\n",
-    "chino_chan(\"ココアさん\")"
+    "chino_chan(\"\")"
    ]
   },
   {
@@ -210,9 +202,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140633704012400\n",
-      "140633704013392\n",
-      "140633704012528\n"
+      "140115634336656\n",
+      "140115634338224\n",
+      "140115634336592\n"
      ]
     }
    ],
@@ -240,8 +232,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "float:140633704012336 tuple:140634079707392 list:140634079196224\n",
-      "float:140634076982736 tuple:140634138872704 list:140634079196224\n"
+      "float:140116204140720 tuple:140115649207680 list:140115634482752\n",
+      "float:140115634338160 tuple:140116203563904 list:140115634482752\n"
      ]
     }
    ],
@@ -265,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tup   : 140634079707392\t\tlst   : 140634079195840\n",
-      "tup_cp: 140634079707392\t\tlst_cp: 140634079195840\n",
+      "tup   : 140115649207360\t\tlst   : 140115645440960\n",
+      "tup_cp: 140115649207360\t\tlst_cp: 140115645440960\n",
       "tup   : (1, 2, 3)\t\tlst   : [1, 2, 3, 4, 5, 6]\n",
       "tup_cp: (1, 2, 3, 4, 5, 6)\tlst_cp: [1, 2, 3, 4, 5, 6]\n"
      ]
@@ -306,8 +298,8 @@
      "output_type": "stream",
      "text": [
       "9801216 9801216\n",
-      "140634079701824 140634079701824\n",
-      "140634079198592 140634079198592\n"
+      "140115649208128 140115649208128\n",
+      "140115645442624 140115645442624\n"
      ]
     }
    ],
@@ -365,8 +357,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', [1, 2, '0']]\n",
-      "[0, [1, 2, '0']]\n",
+      "['X', [1, 2, 'X']]\n",
+      "[0, [1, 2, 'X']]\n",
       "[0, [1, 2]]\n"
      ]
     }
