new file:   C/libraries/list.h 	renamed:    C/queue.h -> C/libraries/queue.h 	renamed:    C/stack.h -> C/libraries/stack.h 	modified:   C/test.c 	modified:   Python/test.ipynb 	new file:   Python/test2.py

--- a/Python/test.ipynb
+++ b/Python/test.ipynb
@@ -342,6 +342,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [x ** 2 for x in range(10)]\n",
+    "lst"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
